--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+aws.region=us-east-2
+aws.bucket.name=marcelocab-ferkipper-imagens
